# dxvk-remix

./: .coderabbit.yml  .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING-style-guide.md  CONTRIBUTING.md  Directory.Build.Props  EXTERNAL-LICENSES  README.md  RELEASE  RtxOptions.md  SECURITY.md  ThirdPartyLicenses.txt  artifacts_readme.txt  build-wina64.txt  build.ps1  build_common.ps1  build_dxvk.ps1  build_dxvk_all_ninja.ps1  build_shaders_only.ps1  cicd_clean_output.ps1  configure_dxvk.ps1  copyGoldenImages.ps1  dxvk.conf  dxvk_rt.sublime-project  dxvk_supplemental_readme.md  gametargets.example.conf  meson.build  meson_options.txt  package-release.sh  packman-external-arm64.xml  packman-external.xml
bridge/: .gitattributes  .gitignore  Directory.Build.Props  LICENSE-MIT  README.md  ThirdPartyLicenses.txt  bridge.conf  build-wina64ec.txt  build.ps1  build_bridge.ps1  build_bridge_all.bat  build_bridge_debug.bat  build_bridge_debugoptimized.bat  build_bridge_release.bat  build_bridge_variant.bat  build_common.ps1  gametargets-example.conf  meson.build  meson_options.txt  version.h.in
bridge/scripts-common/: copy.bat  recursive_copy.bat
bridge/src/: meson.build
bridge/src/client/: base.h  client_options.h  d3d9_base_texture.h  d3d9_bootstrap.cpp  d3d9_commonshader.h  d3d9_cubetexture.cpp  d3d9_cubetexture.h  d3d9_device.cpp  d3d9_device.h  d3d9_device_base.cpp  d3d9_device_base.h  d3d9_indexbuffer.cpp  d3d9_indexbuffer.h  d3d9_lss.cpp  d3d9_lss.def  d3d9_lss.h  d3d9_module.cpp  d3d9_pixelshader.cpp  d3d9_pixelshader.h  d3d9_privatedata.h  d3d9_query.cpp  d3d9_query.h  d3d9_resource.cpp  d3d9_resource.h  d3d9_stateblock.cpp  d3d9_surface.cpp  d3d9_surface.h  d3d9_surfacebuffer_helper.h  d3d9_swapchain.cpp  d3d9_swapchain.h  d3d9_texture.cpp  d3d9_texture.h  d3d9_util.h  d3d9_vertexbuffer.cpp  d3d9_vertexbuffer.h  d3d9_vertexdeclaration.cpp  d3d9_vertexdeclaration.h  d3d9_vertexshader.cpp  d3d9_vertexshader.h  d3d9_volume.cpp  (+23 more)
bridge/src/launcher/: launcher.cpp  meson.build
bridge/src/server/: NvRemixBridge.rc  main.cpp  meson.build  module_processing.cpp  module_processing.h  remix_api.cpp  remix_api.h  resource.h  server_options.h  version.rc.in
bridge/src/tracy/: meson.build
bridge/src/util/: meson.build  util_atomiccircularqueue.h  util_blockingcircularqueue.h  util_bridge_assert.h  util_bridge_state.h  util_bridgecommand.cpp  util_bridgecommand.h  util_bytes.h  util_circularbuffer.h  util_circularqueue.h  util_commands.h  util_common.h  util_detourtools.h  util_devicecommand.h  util_gdi.cpp  util_gdi.h  util_guid.h  util_hack_d3d_debug.h  util_ipcchannel.h  util_messagechannel.cpp  util_messagechannel.h  util_modulecommand.h  util_monitor.cpp  util_monitor.h  util_once.h  util_process.cpp  util_process.h  util_remixapi.cpp  util_remixapi.h  util_scopedlock.h  util_seh.cpp  util_seh.h  util_semaphore.cpp  util_semaphore.h  util_serializable.h  util_serializer.h  util_sharedheap.cpp  util_sharedheap.h  util_sharedmemory.cpp  util_sharedmemory.h  (+3 more)
bridge/vsgen/: bridge-remix.vcxproj.template  bridge_project.py  generate_vs_project_files.py  get_game_target_list.py  sln.py  testcase_project.args.json.template  testcase_project.py  testcase_project.vcxproj.template  testcase_project.vcxproj.user.template  vsutil.py
src/d3d9/: d3d9.def  d3d9_adapter.cpp  d3d9_common_buffer.cpp  d3d9_common_buffer.h  d3d9_common_texture.cpp  d3d9_common_texture.h  d3d9_cursor.cpp  d3d9_device.cpp  d3d9_device.h  d3d9_external_presenter.cpp  d3d9_fixed_function.cpp  d3d9_fixed_function.h  d3d9_format.cpp  d3d9_format.h  d3d9_format_helpers.cpp  d3d9_initializer.cpp  d3d9_interface.cpp  d3d9_interface.h  d3d9_main.cpp  d3d9_options.cpp  d3d9_options.h  d3d9_query.cpp  d3d9_rtx.cpp  d3d9_rtx.h  d3d9_rtx_geometry.cpp  d3d9_rtx_utils.cpp  d3d9_rtx_utils.h  d3d9_shader.cpp  d3d9_shader.h  d3d9_spec_constants.h  d3d9_state.cpp  d3d9_state.h  d3d9_stateblock.cpp  d3d9_subresource.h  d3d9_swapchain.cpp  d3d9_swapchain.h  d3d9_swapchain_external.cpp  d3d9_swvp_emu.cpp  d3d9_texture.cpp  d3d9_util.h  (+4 more)
src/d3d9/pch/: d3d9.pch.h  d3d9_pch.h
src/dxvk/: dxvk_adapter.cpp  dxvk_adapter.h  dxvk_barrier.cpp  dxvk_bind_mask.h  dxvk_buffer.cpp  dxvk_buffer.h  dxvk_cmdlist.cpp  dxvk_cmdlist.h  dxvk_common.cpp  dxvk_common.h  dxvk_compute.cpp  dxvk_compute.h  dxvk_context.cpp  dxvk_context.h  dxvk_context_state.h  dxvk_cs.cpp  dxvk_cs.h  dxvk_descriptor.cpp  dxvk_descriptor.h  dxvk_device.cpp  dxvk_device.h  dxvk_device_filter.cpp  dxvk_device_filter.h  dxvk_device_info.h  dxvk_extensions.h  dxvk_gpu_query.cpp  dxvk_gpu_query.h  dxvk_graphics_state.h  dxvk_image.cpp  dxvk_image.h  dxvk_include.h  dxvk_instance.cpp  dxvk_instance.h  dxvk_limits.h  dxvk_memory.cpp  dxvk_memory.h  dxvk_memory_tracker.cpp  dxvk_memory_tracker.h  dxvk_objects.h  dxvk_options.cpp  (+27 more)
src/dxvk/hud/: dxvk_hud.cpp  dxvk_hud.h  dxvk_hud_item.cpp  dxvk_hud_item.h  dxvk_hud_renderer.cpp
src/dxvk/imgui/: dxvk_imgui.cpp  dxvk_imgui.h  dxvk_imgui_about.cpp  dxvk_imgui_about.h  dxvk_imgui_capture.cpp  dxvk_imgui_capture.h  dxvk_imgui_extensions.cpp  dxvk_imgui_extensions.h  dxvk_imgui_splash.cpp  dxvk_imgui_splash.h  imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_impl_dxvk.hpp  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_impl_win32.cpp  imgui_impl_win32.h  imgui_widgets.cpp  implot.h  implot_items.cpp  rtx_user_menu.cpp
src/dxvk/pch/: dxvk.pch.h  dxvk_pch.h
src/dxvk/rtx_render/: rtx.h  rtx_NGXWrapper.cpp  rtx_NGXWrapper.h  rtx_accel_manager.cpp  rtx_accel_manager.h  rtx_accelmanager.cpp  rtx_accelmanager.h  (+232 more)
src/lssusd/: curve_utils.h  game_exporter.cpp  game_exporter.h  game_exporter_common.h  game_exporter_paths.h  game_exporter_types.h  mdl_helpers.h  meson.build  particle_system_helpers.h  particle_system_helpers_vec.h  usd_common.h  usd_include_begin.h  usd_include_end.h  usd_mesh_importer.cpp  usd_mesh_importer.h  usd_mesh_samplers.h
src/usd-plugins/: Readme-AddingNewPlugins.md  meson.build  packman-external-arm64.xml  packman-external.xml
tests/rtx/: meson.build
(+876 files in other folders)
